<resources>
    <string name="app_name">Network Ninjax</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_phone_status">Phone Status</string>
    <string name="title_activity_phone">Cellphone Data</string>
    <string name="tvPhoneStatus">Phone Status</string>

    <string name="tvServiceState">Service State : </string>
    <string name="tvCellLocation">Cell Location : </string>
    <string name="tvCallState">Call State : </string>
    <string name="tvConnState">Connection State : </string>
    <string name="tvSignalLevel">Signal Level : </string>
    <string name="strData">Data : </string>
    <string name="done">Listening successfully completed, time to send the results.</string>
</resources>
